--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,6 +120,31 @@ body{
     -webkit-box-shadow: 10px 9px 15px -1px rgba(0,0,0,0.32);
     -moz-box-shadow: 10px 9px 15px -1px rgba(0,0,0,0.32);
 }
+.img-text{
+    margin: auto;
+    width: max-content;
+    height: max-content;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #F0E6EF;
+    transform: translate(0px, -200px);
+    animation:img-text-fade 0.5s 1;
+    -webkit-animation:img-text-fade 0.5s 1;
+    animation-fill-mode: forwards;
+    animation-delay:7s;
+    -webkit-animation-delay:7s; /* Safari and Chrome */
+    -webkit-animation-fill-mode: forwards;
+    user-select: none;
+    transition: 0.3s;
+}
+@keyframes img-text-fade {
+    from {opacity :1;}
+    to {opacity :0;}
+}
+@-webkit-keyframes img-text-fade{
+    from {opacity :1;}
+    to {opacity :0;}
+}
+
 .anime-img2{
     width: 60%;
     height: 60%;
@@ -129,7 +154,9 @@ body{
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
     cursor: pointer;
 }
-
+.anime-img:hover ~ .img-text{
+    opacity: 0;
+}
 
 .pagination > li > a:focus,
 .pagination > li > a:hover,
